--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0cd446ad",
+   "execution_count": 1,
+   "id": "3f9a8d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,212 @@
     "import os\n",
     "import os.path as osp\n",
     "import json\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "from data import load_jsrt, load_unpaired\n",
+    "from net import translator, utils\n",
+    "from scope_tools import translation_metrics\n",
     "#fuck it!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8ee89226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bases = [\"/home/rb080/scratch/Archives/narnia/Outputs/ab_ssim\",\n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/ab_ssim_attn\", \n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/ab_ssim_deep\",\n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/unp1\",\n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/ab_base_repeat\", \n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/ab_base_attn\", \n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/ab_base_deep\",\n",
+    "        \"/home/rb080/scratch/Archives/narnia/Outputs/ab_base_attn_deep\"\n",
+    "        ]\n",
+    "datasets = [\"unpaired\", \"jsrt\"]\n",
+    "data_paths = [\"/home/rb080/scratch/Archives/narnia/Data/Unpaired\", \n",
+    "             \"/home/rb080/scratch/Archives/narnia/Data/JSRT_dataset\"]\n",
+    "\n",
+    "\n",
+    "model_ext = \"saved_models/Gxy_bm.pth\"\n",
+    "args_ext = \"configs.json\"\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "91f4abf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tools\n",
+    "class DATA():\n",
+    "    def __init__(self, dataset, path, bs=1, nw=0):\n",
+    "        self.data_root = path\n",
+    "        self.trans_batch = bs\n",
+    "        self.num_workers = nw\n",
+    "        self.use_attention = False\n",
+    "        self.dataparallel = True\n",
+    "        if torch.cuda.is_available(): self.device = \"cuda\"\n",
+    "        else: self.device = \"cpu\"\n",
+    "        print(\"Using device:\", self.device)\n",
+    "\n",
+    "\n",
+    "def load_image(img_path, map_path=None, mode=\"torch\"):\n",
+    "    print(img_path, map_path)\n",
+    "    img = cv2.imread(img_path)\n",
+    "    img = cv2.resize(img, (256, 256), cv2.INTER_AREA)\n",
+    "    \n",
+    "    if mode == \"cv2\": return img\n",
+    "    \n",
+    "    img = np.array(img, np.float32).transpose(2, 0, 1) / 255.0\n",
+    "    \n",
+    "    if mode == \"numpy\": return img\n",
+    "    \n",
+    "    img = torch.tensor(img, dtype=torch.float32)\n",
+    "    img = img.unsqueeze(0)\n",
+    "    \n",
+    "    mask = cv2.imread(map_path, cv2.IMREAD_GRAYSCALE)\n",
+    "    mask = np.array(mask, np.float32) / 255.0\n",
+    "    mask = torch.tensor(mask, dtype=torch.float32)\n",
+    "    mask = mask.unsqueeze(0).unsqueeze(0)\n",
+    "    print(img.shape, mask.shape)\n",
+    "    return img, mask\n",
+    "\n",
+    "def convert(T):\n",
+    "    T = (T[0] * 255.0).detach().cpu()\n",
+    "    T = np.array(T).transpose(1,2,0)\n",
+    "    return T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "35348c89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "Using device: cuda\n",
+      "Using device: cuda\n",
+      "Using device: cuda\n",
+      "Using device: cuda\n",
+      "Using device: cuda\n",
+      "Using device: cuda\n",
+      "Using device: cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "#data_lists\n",
+    "experiment_keys = [\"ab_ssim\", \"ab_ssim_attn\", \"ab_ssim_deep\", \"ab_ssim_deep_attn\",\n",
+    "                   \"ab_base\", \"ab_base_attn\", \"ab_base_deep\", \"ab_base_deep_attn\"]\n",
+    "base_list = bases\n",
+    "DS = 0\n",
+    "\n",
+    "if torch.cuda.is_available(): device = \"cuda\"\n",
+    "else: device = \"cpu\"\n",
+    "\n",
+    "data_root = data_paths[DS]\n",
+    "dataset = datasets[DS]\n",
+    "\n",
+    "master_dict = {}\n",
+    "\n",
+    "for i, k in enumerate(experiment_keys):\n",
+    "    master_dict[k] = {}\n",
+    "    \n",
+    "    args = DATA(dataset, data_root)\n",
+    "    if k.count(\"attn\") != 0: args.use_attention = True\n",
+    "    master_dict[k][\"args\"] = args\n",
+    "    \n",
+    "    Gxy, _, _, _ = translator.get_model_set(args)\n",
+    "    Gxy.load_state_dict(torch.load(osp.join(\n",
+    "        bases[i], model_ext)))\n",
+    "    master_dict[k][\"model\"] = Gxy\n",
+    "    master_dict[k][\"model\"].to(device)\n",
+    "    master_dict[k][\"model\"].eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bba153a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2893_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2893_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/augmented0_0.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/augmented0_0.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2944_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2944_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2889_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2889_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2910_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2910_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2936_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2936_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2893_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2893_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/2952_E.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/2952_E.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/augmented0_4.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/augmented0_4.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n",
+      "/home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/testX/augmented0_6.png /home/rb080/scratch/Archives/narnia/Data/Unpaired/Test/mapX/augmented0_6.png\n",
+      "torch.Size([1, 3, 256, 256]) torch.Size([1, 1, 256, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_list = [\n",
+    "    \"Test/testX/2893_E.png\",\n",
+    "    \"Test/testX/augmented0_0.png\",\n",
+    "    \"Test/testX/2944_E.png\",\n",
+    "    \"Test/testX/2889_E.png\",\n",
+    "    \"Test/testX/2910_E.png\",\n",
+    "    \"Test/testX/2936_E.png\",\n",
+    "    \"Test/testX/2893_E.png\", \n",
+    "    \"Test/testX/2952_E.png\",\n",
+    "    \"Test/testX/augmented0_4.png\",\n",
+    "    \"Test/testX/augmented0_6.png\"\n",
+    "]\n",
+    "\n",
+    "for img in img_list:\n",
+    "    ip = osp.join(data_paths[DS], img)\n",
+    "    mp = osp.join(data_paths[DS], img.replace(\"testX\", \"mapX\"))\n",
+    "    I, M = load_image(ip, mp, mode=\"torch\")\n",
+    "    I.to(device)\n",
+    "    M.to(device)\n",
+    "    for exp in experiment_keys:\n",
+    "        Y = master_dict[exp][\"model\"](I, M, deep_supervision=False)\n",
+    "        Y = convert(Y)\n",
+    "        img_name = img.split(\"/\")[-1]\n",
+    "        cv2.imwrite(osp.join(\"/home/rb080/scratch/Archives/narnia/Outputs/visuals\", exp+\"_\"+img_name), Y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74cb87be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
